--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,47 +6,30 @@
     tools:context=".MainActivity">
 
 
-    <TextView
-        android:id="@+id/textview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:text="Login"
-        android:textSize="35dp" />
-
-
     <EditText
         android:id="@+id/editText"
         android:layout_width="327dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textview"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="21dp"
+        android:layout_marginTop="225dp"
         android:focusable="true"
-        android:hint="Enter Name" />
+        android:hint="username" />
 
     <EditText
         android:id="@+id/editText2"
         android:layout_width="327dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editText"
         android:layout_alignEnd="@+id/editText"
         android:layout_alignRight="@+id/editText"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="277dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginBottom="337dp"
         android:ems="10"
-        android:hint="Password"
+        android:hint="password"
         android:inputType="textPassword" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/editText2"
-        android:layout_centerHorizontal="true"
-        android:layout_marginEnd="-93dp"
-        android:layout_marginRight="-93dp"
-        android:layout_marginBottom="-111dp"
-        android:onClick="openActivity"
-        android:text="login" />
 </RelativeLayout>
