--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,45 +10,37 @@
 
     <EditText
         android:id="@+id/editText"
+        android:layout_alignParentTop="true"
         android:layout_width="327dp"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="300dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="225dp"
-        android:focusable="true"
+        android:layout_marginLeft="300dp"
+        android:layout_marginTop="222dp"
+        android:layout_marginEnd="300dp"
+        android:layout_marginRight="300dp"
+        android:layout_marginBottom="355dp"
+        android:textSize="22dp"
         android:hint="username" />
 
     <EditText
         android:id="@+id/editText2"
         android:layout_width="327dp"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
+        android:layout_centerInParent="true"
         android:layout_alignEnd="@+id/editText"
         android:layout_alignRight="@+id/editText"
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="277dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginBottom="337dp"
+        android:layout_marginTop="303dp"
+        android:layout_marginEnd="-1dp"
+        android:layout_marginRight="-1dp"
+        android:layout_marginBottom="276dp"
+        android:textSize="22dp"
         android:ems="10"
         android:hint="password"
         android:inputType="textPassword" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="283dp"
-        android:layout_height="197dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="64dp"
-        android:layout_marginLeft="64dp"
-        android:layout_marginEnd="64dp"
-        android:layout_marginRight="64dp"
-        android:layout_marginBottom="440dp"
-        app:srcCompat="@drawable/logo" />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -59,7 +51,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="214dp"
         android:layout_marginRight="214dp"
-        android:layout_marginBottom="156dp"
+        android:layout_marginBottom="123dp"
         app:srcCompat="@drawable/login" />
 
     <ImageView
@@ -71,7 +63,20 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="0dp"
         android:layout_marginRight="0dp"
-        android:layout_marginBottom="156dp"
+        android:layout_marginBottom="123dp"
         app:srcCompat="@drawable/register" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="189dp"
+        android:layout_height="173dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginEnd="116dp"
+        android:layout_marginRight="116dp"
+        android:layout_marginBottom="465dp"
+        app:srcCompat="@drawable/logolow" />
 
 </RelativeLayout>
