--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/button1"
         android:layout_width="150dp"
         android:layout_height="70dp"
         android:layout_alignParentStart="true"
@@ -57,7 +57,7 @@
         app:srcCompat="@drawable/login" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/button2"
         android:layout_width="150dp"
         android:layout_height="70dp"
         android:layout_alignParentEnd="true"
