--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,11 @@
         android:id="@+id/logo"
         android:layout_width="200dp"
         android:layout_height="200dp"
+        android:layout_centerInParent="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="44dp"
-        android:layout_marginBottom="415dp"
+        android:layout_marginTop="13dp"
+        android:layout_marginBottom="446dp"
         android:src="@drawable/logolow"
         tools:ignore="ContentDescription" />
 
