--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -111,13 +111,14 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginStart="37dp"
         android:layout_alignParentBottom="true"
+        android:layout_marginStart="37dp"
         android:layout_marginLeft="37dp"
         android:layout_marginTop="470dp"
         android:layout_marginEnd="37dp"
         android:layout_marginRight="37dp"
         android:layout_marginBottom="40dp"
+        android:visibility="invisible"
         app:srcCompat="@drawable/register" />
 
     <ImageView
