--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/loginbackground"
-    tools:context=".LoginActivity">
+    android:background="@drawable/loginbackground">
 
     <ImageView
         android:id="@+id/logo"
@@ -16,7 +15,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="44dp"
         android:layout_marginBottom="415dp"
-        android:src="@drawable/logo1"
+        android:src="@drawable/logo_low"
         tools:ignore="ContentDescription" />
 
     <EditText
