--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,6 @@
     <color name="colorMain">#13C42B</color>
     <color name="colorWhite">@android:color/white</color>
     <color name="colorBlack">@android:color/black</color>
-    <color name="colorPrimary">#278be3</color>
-    <color name="colorPrimaryDark">#0f5998</color>
-    <color name="colorAccent">#4075a2</color>
-    <color name="colorNavIcon">#dae9f6</color>
+    <color name="colorNavIcon">	#04110F</color>
     <color name="colorNavText">#01294b</color>
 </resources>
