--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -2,14 +2,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/navigation_options"
+        android:icon="@drawable/options2"
+        android:title="@string/options" />
+    <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/home"
         android:title="@string/title_home" />
     <item
         android:id="@+id/navigation_search"
         android:icon="@drawable/search"
         android:title="@string/search" />
 
+    <item
+        android:id="@+id/navigation_tasks"
+        android:icon="@drawable/tasks_logo"
+        android:title="@string/tasks" />
     <item
         android:id="@+id/navigation_profile"
         android:icon="@drawable/profile2"
