--- a/app/src/main/res/layout/draver_layout.xml
+++ b/app/src/main/res/layout/draver_layout.xml
@@ -26,8 +26,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/container"
-        tools:context=".HomeActivity">
+        android:id="@+id/container">
 
         <FrameLayout
             android:id="@+id/main_frame"
