--- a/app/src/main/res/menu/side_menu.xml
+++ b/app/src/main/res/menu/side_menu.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="navigation_view">
+
+<item
+    android:id="@+id/nav_home"
+    android:icon="@drawable/ic_menu_camera"
+    android:title="@string/menu_home" />
+<item
+android:id="@+id/nav_gallery"
+android:icon="@drawable/ic_menu_gallery"
+android:title="@string/menu_gallery" />
+
 </menu>
