--- a/app/src/main/res/menu/activity_side_menu_drawer.xml
+++ b/app/src/main/res/menu/activity_side_menu_drawer.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <group android:checkableBehavior="single">
+    <group android:checkableBehavior="single">//ez mi? idk igy volt eddig is
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_menu_camera"/>
             android:title="@string/menu_home" />
         <item
             android:id="@+id/nav_gallery"
