--- a/app/src/main/res/menu/activity_side_menu_drawer.xml
+++ b/app/src/main/res/menu/activity_side_menu_drawer.xml
@@ -3,15 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <group android:checkableBehavior="single">//ez mi? idk igy volt eddig is
+    <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"/>
-            android:title="@string/menu_home" />
+            android:icon="@drawable/settings"
+            android:title="@string/settings" />
         <item
             android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
+            android:icon="@drawable/logout"
+            android:title="@string/logout" />
+
     </group>
 
 </menu>
