--- a/app/src/main/res/menu/side_menu.xml
+++ b/app/src/main/res/menu/side_menu.xml
@@ -3,11 +3,11 @@
 
     <item
         android:id="@+id/nav_home"
-        android:icon="@drawable/ic_menu_camera"
-        android:title="@string/menu_home" />
+        android:icon="@drawable/settings"
+        android:title="@string/settings" />
     <item
         android:id="@+id/nav_gallery"
-        android:icon="@drawable/ic_menu_gallery"
-        android:title="@string/menu_gallery" />
+        android:icon="@drawable/logout"
+        android:title="@string/logout" />
 
 </menu>
